--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,12 @@
+* {
+    text-align: center;
+}
+
 ol {
-    
+    list-style-type: none;
+}
+
+h1, p, ol{
+    font-family: Arial, Helvetica, sans-serif;
+
 }
