--- a/week2/styles/week2.css
+++ b/week2/styles/week2.css
@@ -1,8 +1,9 @@
 * {
-    text-align: left;
-    margin-left: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
-div {
-    margin: 10;
+ol {
+    list-style-type: none;
 }
+
