--- a/week3/styles/week3.css
+++ b/week3/styles/week3.css
@@ -1,7 +1,16 @@
-.emphasize {
-    font-style: italic;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 img {
     width: 200px;
+}
+
+ol {
+    list-style-type: none;
+}
+
+.emphasize {
+    font-style: italic;
 }
