--- a/weightAndBalance/styles/main.css
+++ b/weightAndBalance/styles/main.css
@@ -1,6 +1,10 @@
 
 * {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ol {
+  list-style-type: none;
 }
 
 header {
